Fixed Overflow and Delete Key Bug

--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,10 @@ button{
 
 }
 
-.operator{
+.yellowBackground{
     background-color: rgb(255, 255, 168);
+}
+
+.operatorClicked{
+    background-color: rgb(255, 255, 0);
 }
